# irtp

./: CMakeLists.txt  README.md  build.sh  main.cpp  start.sh
JRtplib/JRTPLIB-3.11.2/src/: CMakeLists.txt
JRtplib/JThread-1.3.3/src/: CMakeLists.txt
JRtplib/script/: build_jrtplib.sh  build_jthread.sh
ORtp/: CMakeLists.txt  CMakeLists_bk.txt
ORtp/include/: CMakeLists.txt  ortp-config.h
ORtp/include/ortp/: rtpsession.h
ORtp/script/: build_bctoolbox.sh  build_bcuint.sh  build_mbedtls.sh
ORtp/src/: CMakeLists.txt  rtpsession.c
irtp/: ICommon.h  JRtpSession.cpp  JRtpSession.h  ORtpSession.cpp  ORtpSession.h  RtcpPacket.h  RtpSchedule.cpp  RtpSchedule.h  RtpSessionMpl.h  cgo_RtpSessionManager.cpp  cgo_RtpSessionManager.h
